syntax = "proto3";

package api.product_net;

import "google/api/annotations.proto";

option go_package = "c3h/api/product_net;product_net";
option java_multiple_files = true;
option java_package = "api.product_net";

service ProductNet {

  rpc GetSwitchInfo (SwitchRequest) returns (SwitchReply) {
    option (google.api.http) = {
      get: "/c3h/product-net/switch"
    };
  }

  rpc GetControlVars (ControlVarRequest) returns (ControlVarReply) {
    option (google.api.http) = {
      get: "/c3h/product-net/control-vars"
    };
  }

  rpc GetControlledVars (ControlledVarRequest) returns (ControlledVarReply) {
    option (google.api.http) = {
      get: "/c3h/product-net/controlled-vars"
    };
  }

  rpc GetConfoundingVars (ConfoundingVarRequest) returns (ConfoundingVarReply) {
    option (google.api.http) = {
      get: "/c3h/product-net/confounding-vars"
    };
  }

  rpc GetCatalyst (CatalystRequest) returns (CatalystReply) {
    option (google.api.http) = {
      get: "/c3h/product-net/catalyst"
    };
  }
}

message SwitchRequest {}
message SwitchReply {
  int32           code = 1;
  SwitchReplyData data = 2;
}

message SwitchReplyData {
  SwitchDetail DC_402_Total  = 1;
  SwitchDetail DC_402_Manual = 2;
  SwitchDetail DC_402_AB     = 3;
  SwitchDetail MAPD_export   = 4;
  SwitchDetail drier         = 5;
  SwitchDetail communication = 6;
}

message SwitchDetail {
  string text = 1;
  string type = 2;
}

message ControlVarRequest {}
message ControlVarReply {
  int32        code = 1;
  VarReplyData data = 2;
}

message ControlledVarRequest {}
message ControlledVarReply {
  int32        code = 1;
  VarReplyData data = 2;
}

message ConfoundingVarRequest {}
message ConfoundingVarReply {
  int32        code = 1;
  VarReplyData data = 2;
}

message CatalystRequest {}
message CatalystReply {
  int32        code = 1;
  VarReplyData data = 2;
}

message VarReplyData {
  repeated VarDetail list = 1;
}

message VarDetail {
  string name       = 1;
  string desc       = 2;
  double real_value = 3;
  double set_value  = 4;
  double low_limit  = 5;
  double high_limit = 6;
  string unit       = 7;
}
